- Update to 0.3.0 - Trim Makefile header - Add new option DBUS - Convert to USES=desktop-file-utils gettext pathfix pkgconfig - Remove unneeded patch
git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316383 35697150-7ecd-e111-bb59-0022644237b5

--- a/editors/mousepad/Makefile
+++ b/editors/mousepad/Makefile
@@ -1,29 +1,35 @@
-# New ports collection makefile for:	mousepad
-# Date created:		19 April 2006
-# Whom:			Oliver Lehmann <oliver@FreeBSD.org>
-#
+# Created by: Oliver Lehmann <oliver@FreeBSD.org>
 # $FreeBSD$
 #
 
 PORTNAME=	mousepad
-PORTVERSION=	0.2.16
-PORTREVISION=	11
+PORTVERSION=	0.3.0
 CATEGORIES=	editors xfce
 MASTER_SITES=	${MASTER_SITE_XFCE}
 MASTER_SITE_SUBDIR=src/apps/${PORTNAME}/${PORTVERSION:R}
 DIST_SUBDIR=	xfce4
 
 MAINTAINER=	xfce@FreeBSD.org
-COMMENT=	Simple Xfce editor
+COMMENT=	Simple text editor for the Xfce Desktop
 
 GNU_CONFIGURE=	yes
 USE_BZIP2=	yes
-USE_GETTEXT=	yes
 USE_GMAKE=	yes
-USE_GNOME=	gtk20 intltool intlhack pkgconfig desktopfileutils
-USE_XFCE=	configenv libgui
+USES=	desktop-file-utils gettext pathfix pkgconfig
+USE_GNOME=	glib20 gtk20 intltool intlhack gtksourceview2
+USE_XFCE=	configenv
+USE_PERL5=	yes
 
-post-install:
-	@-update-desktop-database
+OPTIONS_DEFINE=	DBUS
+OPTIONS_DEFAULT=	DBUS
+
+.include <bsd.port.options.mk>
+
+.if ${PORT_OPTIONS:MDBUS}
+LIB_DEPENDS=	dbus-glib-1:${PORTSDIR}/devel/dbus-glib
+CONFIGURE_ARGS+=--enable-dbus
+.else
+CONFIGURE_ARGS+=--disable-dbus
+.endif
 
 .include <bsd.port.mk>
