Add www/webmachine, an application layer that adds HTTP semantic awareness on top of mochiweb.
git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316384 35697150-7ecd-e111-bb59-0022644237b5

--- a/www/Makefile
+++ b/www/Makefile
@@ -2032,6 +2032,7 @@
     SUBDIR += webkit-sharp
     SUBDIR += weblint
     SUBDIR += weblint++
+    SUBDIR += webmachine
     SUBDIR += webobjects
     SUBDIR += webpy
     SUBDIR += webreport
