- Update to 4.3.15 - Replace USE_GETTEXT by USES - Add a single space on WWW line
git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316385 35697150-7ecd-e111-bb59-0022644237b5

--- a/archivers/sharutils/Makefile
+++ b/archivers/sharutils/Makefile
@@ -2,7 +2,7 @@
 # $FreeBSD$
 
 PORTNAME=	sharutils
-PORTVERSION=	4.13.3
+PORTVERSION=	4.13.5
 CATEGORIES=	archivers
 MASTER_SITES=	GNU
 
@@ -26,7 +26,7 @@ INFO=		sharutils
 
 .if ${PORT_OPTIONS:MNLS}
 PLIST_SUB+=	NLS=""
-USE_GETTEXT=	yes
+USES=		gettext
 CONFIGURE_ARGS+=--with-libintl-prefix="${LOCALBASE}"
 .else
 PLIST_SUB+=	NLS="@comment "
