Unbreak (again) by using the USE_QT* knob(s) in accordance to the most recent whims of bsd.qt.mk
Somebody ought to wear the pointy hat...


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316390 35697150-7ecd-e111-bb59-0022644237b5

--- a/devel/subcommander2/Makefile
+++ b/devel/subcommander2/Makefile
@@ -19,13 +19,10 @@ LIB_DEPENDS=	boost_thread:${PORTSDIR}/devel/boost-libs \
 LATEST_LINK=	subcommander2
 CONFLICTS=	subcommander-1.*
 
-BROKEN=		does not build
-
 WRKSRC=		${WRKDIR}/${PORTNAME}-${PORTVERSION:R:S,.b,b,}p${PORTVERSION:E}
 
 USE_DOS2UNIX=	*.cpp *.h
-USE_QT_VER=	4
-QT_COMPONENTS=	corelib gui network qt3support moc_build rcc_build uic_build
+USE_QT4=	corelib gui network qt3support moc_build rcc_build uic_build
 QT_NONSTANDARD=	yes
 USE_OPENSSL=	yes
 USE_GMAKE=	yes
