--- a/korean/unfonts-extra/Makefile
+++ b/korean/unfonts-extra/Makefile
@@ -5,11 +5,11 @@
 # $FreeBSD$
 
 PORTVERSION=	1.0.1
+PORTREVISION=	1
 MASTER_SITES=	http://kldp.net/frs/download.php/1435/
 
 FONTCAT=	extra
-FONTLIST=	UnBom \
-		UnJamoBatang \
+FONTLIST=	UnJamoBatang \
 		UnJamoDotum \
 		UnJamoNovel \
 		UnJamoSora \
