Fix typo in USES.
Approved by:	portmgr (bapt)


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316393 35697150-7ecd-e111-bb59-0022644237b5

--- a/www/squid32/Makefile
+++ b/www/squid32/Makefile
@@ -456,7 +456,7 @@ CONFIGURE_ARGS+=	--enable-ecap
 LIB_DEPENDS+=	ecap:${PORTSDIR}/www/libecap
 CFLAGS+=	-I${LOCALBASE}/include
 LDFLAGS+=	-L${LOCALBASE}/lib
-USES+=		pkgc
+USES+=		pkgconfig
 .else
 CONFIGURE_ARGS+=	--disable-ecap
 .endif
