Unbreak -- compiles here (9.1/amd64). While at it, patch the ancient code up so it compiles cleaner.
git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316395 35697150-7ecd-e111-bb59-0022644237b5

--- a/net/rmsg/Makefile
+++ b/net/rmsg/Makefile
@@ -17,10 +17,4 @@ WRKSRC=		${WRKDIR}/rmsg
 MAN1=		rmsg.1
 MAN8=		rmsgd.8
 
-.include <bsd.port.pre.mk>
-
-.if ${OSVERSION} > 900007
-BROKEN=		fails to build with new utmpx
-.endif
-
-.include <bsd.port.post.mk>
+.include <bsd.port.mk>
