Modernize the port:
	* Build using of the available CPUs
	* Use PLIST_FILES -- there are only two
	* Add a service script for easier stopping/starting

Bump PORTREVISION because of the last item.


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316396 35697150-7ecd-e111-bb59-0022644237b5

--- a/net/rmsg/Makefile
+++ b/net/rmsg/Makefile
@@ -7,6 +7,7 @@
 
 PORTNAME=	rmsg
 PORTVERSION=	1.64
+PORTREVISION=	1
 CATEGORIES=	net
 MASTER_SITES=	ftp://ftp.funet.fi/pub/unix/tcpip/
 
@@ -16,5 +17,8 @@ COMMENT=	A network messaging system
 WRKSRC=		${WRKDIR}/rmsg
 MAN1=		rmsg.1
 MAN8=		rmsgd.8
+MAKE_JOBS_SAFE=	yes
+PLIST_FILES=	bin/rmsg sbin/rmsgd
+USE_RC_SUBR=	rmsgd
 
 .include <bsd.port.mk>
