--- a/security/pam_alreadyloggedin/Makefile
+++ b/security/pam_alreadyloggedin/Makefile
@@ -3,7 +3,7 @@
 
 PORTNAME=	pam_alreadyloggedin
 PORTVERSION=	0.3
-PORTREVISION=	1
+PORTREVISION=	2
 CATEGORIES=	security
 MASTER_SITES=	${MASTER_SITE_LOCAL}					\
 		http://green.homeunix.org/~green/
@@ -14,18 +14,11 @@ COMMENT=	PAM module based on whether a user is already logged in
 
 MANCOMPRESSED=	yes
 
-.include <bsd.port.pre.mk>
-
-.if ${OSVERSION} > 900007
-BROKEN=		fails to build with new utmpx
-.endif
-
-.if defined(NO_PROFILE) || defined(NOPROFILE) || defined(WITHOUT_PROFILE)
-PLIST_SUB+=	PROFILE="@comment "
-.else
-PLIST_SUB+=	PROFILE=""
-.endif
-
 MAN8=		pam_alreadyloggedin.8
+MAKE_JOBS_SAFE=	yes
+PLIST_FILES=	lib/pam_alreadyloggedin.so lib/pam_alreadyloggedin.so.2
 
-.include <bsd.port.post.mk>
+do-configure:
+	${LN} -s ${FILESDIR}/Makefile.inc ${WRKDIR}/
+
+.include <bsd.port.mk>
