fixed a mozc-el build issue
git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316406 35697150-7ecd-e111-bb59-0022644237b5

--- a/japanese/mozc-el/Makefile
+++ b/japanese/mozc-el/Makefile
@@ -13,7 +13,8 @@ PKGMESSAGE=	${.CURDIR}/pkg-message
 
 BUILD_MOZC_LIST=mozc_el
 
-BROKEN=		fails to build
+USE_EMACS=	yes
+CATEGORIES=	editors elisp
 
 post-install:
 	@${CAT} ${PKGMESSAGE}
