Mark the following ports deprecated. They have been unsupported upstream for years. - comms/libticables (superseded by comms/libticables2) - devel/libticalcs (superseded by comms/libticalcs2) - devel/libtifiles (superseded by devel/libtifiles2) - emulators/tiemu2 (superseded by emulators/tiemu3)
git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316409 35697150-7ecd-e111-bb59-0022644237b5

--- a/comms/libticables/Makefile
+++ b/comms/libticables/Makefile
@@ -11,8 +11,11 @@ PORTREVISION=	3
 CATEGORIES=	comms
 MASTER_SITES=		SF/tilp/OldFiles
 
-MAINTAINER=	tijl@coosemans.org
+MAINTAINER=	ports@FreeBSD.org
 COMMENT=	TI calculator link cables library
+
+DEPRECATED=     Superseded by comms/libticables2
+EXPIRATION_DATE=2013-07-01
 
 CPPFLAGS+=	-I${LOCALBASE}/include
 LDFLAGS+=	-L${LOCALBASE}/lib
