Set MAINTAINER to my @FreeBSD.org address.
Suggested by:	crees


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316410 35697150-7ecd-e111-bb59-0022644237b5

--- a/comms/tilp2/Makefile
+++ b/comms/tilp2/Makefile
@@ -5,7 +5,7 @@ PORTVERSION=	1.17
 CATEGORIES=	comms
 MASTER_SITES=	SF/tilp/tilp2-linux/${DISTNAME}
 
-MAINTAINER=	tijl@coosemans.org
+MAINTAINER=	tijl@FreeBSD.org
 COMMENT=	TI Linking Program
 
 LICENSE=	GPLv2
