- Take maintainership (tcltk@) - Trim Makefile header - Fix run-time segfault
git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316415 35697150-7ecd-e111-bb59-0022644237b5

--- a/devel/tclreadline/Makefile
+++ b/devel/tclreadline/Makefile
@@ -1,9 +1,5 @@
-# New ports collection makefile for:	tclreadline
-# Date created:		21 September 1999
-# Whom:			darius@dons.net.au
-#
+# Created by: darius@dons.net.au
 # $FreeBSD$
-#
 
 PORTNAME=	tclreadline
 PORTVERSION=	2.1.0
@@ -11,17 +7,22 @@ PORTREVISION=	3
 CATEGORIES=	devel tcl
 MASTER_SITES=	SF/${PORTNAME}/${PORTNAME}/${PORTNAME}-${PORTVERSION}
 
-MAINTAINER=	ports@FreeBSD.org
+MAINTAINER=	tcltk@FreeBSD.org
 COMMENT=	GNU readline for TCL
 
 USE_TCL=	84+
 USE_AUTOTOOLS=	libtool
-GNU_CONFIGURE=	yes
 USE_LDCONFIG=	yes
 MANN=		tclreadline.n
 
 PLIST_SUB+=	VERSION="${PORTVERSION}"
 
-CONFIGURE_ARGS=	--with-tcl=${TCL_LIBDIR} --with-tcl-includes=${TCL_INCLUDEDIR}
+CONFIGURE_ARGS+=--with-tcl=${TCL_LIBDIR} \
+		--with-tcl-includes=${TCL_INCLUDEDIR}
+
+post-patch:
+	${REINPLACE_CMD} \
+	    -e '/^#define MALLOC/d; /^#define FREE/d; s|MALLOC|malloc|g; s|FREE|free|g' \
+	    ${WRKSRC}/tclreadline.c
 
 .include <bsd.port.mk>
