- Update to 1.15   Release notes: http://code.activestate.com/lists/tcl-core/13030/ - Simplify regression-test target - Include some patches that were pushed upstream after 1.15 was released
git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316416 35697150-7ecd-e111-bb59-0022644237b5

--- a/devel/tcllib/Makefile
+++ b/devel/tcllib/Makefile
@@ -1,81 +1,57 @@
-# New ports collection makefile for: 	tcllib
-# Date created:				27 Apr 2000
-# Whom:					Mikhail Teterin <mi@aldan.algebra.com>
-#
+# Created by: Mikhail Teterin <mi@aldan.algebra.com>
 # $FreeBSD$
-#
 
 PORTNAME=	tcllib
-PORTVERSION=	1.14
-PORTREVISION=	1
+PORTVERSION=	1.15
 CATEGORIES=	devel tcl
 MASTER_SITES=	SF
 
 MAINTAINER=	tcltk@FreeBSD.org
 COMMENT=	A collection of utility modules for Tcl
 
-USE_TCL_BUILD=	84+
-USE_TCL_RUN=	${USE_TCL_BUILD}
+USE_TCL=	84+
 
-USE_BZIP2=	yes
 GNU_CONFIGURE=	yes
 ALL_TARGET=	all
 MAKE_ENV+=	LANG=C
+PORTDOCS=	*
 
-.include <bsd.port.pre.mk>
+.include <bsd.port.options.mk>
 .include "Makefile.man"
 
 CONFIGURE_ENV+=	ac_cv_path_tclsh="${TCLSH}"
 
 post-patch:
-	#
-	# Ensure, the detailed output of vendors' self-tests is
-	# available in addition to the pretty progress report:
-	#
+#
+# 	Ensure, the detailed output of vendors' self-tests is
+# 	available in addition to the pretty progress report:
+#
 	${REINPLACE_CMD} -e 's,test run,test run -l testlog,' \
 		-e 's,$$(libdir)/@PACKAGE@@VERSION@,$$(libdir)/@PACKAGE@,' \
 		${WRKSRC}/Makefile.in
 	${FIND} ${WRKSRC}/apps -type f ! -name "*.man" | ${XARGS} \
 	   ${REINPLACE_CMD} -e 's,exec tclsh,exec ${TCLSH},'
-	#
-	# patch(1) adds a newline at eof, so we need to remove it here
-	#
+#
+# 	patch(1) adds a newline at eof, so we need to remove it here
+#
 	${AWK} 'NR > 1 { print h } { h = $$0 } END { ORS = ""; print h }' \
 	   ${WRKSRC}/modules/doctools/tests/text/04 > ${WRKSRC}/modules/doctools/tests/text/04.new
 	${MV} ${WRKSRC}/modules/doctools/tests/text/04.new ${WRKSRC}/modules/doctools/tests/text/04
+#
+#	 .orig files confuse the pt module test suite and eventually get
+#	 installed
+#
+	${FIND} ${WRKSRC} -name "*.orig" -delete
 
-	# try(n) is part of Tcl core since 8.6
-.if ${TCL_VER:S/.//} < 86
-MANN+=		try.n
-.else
-	${MV} ${WRKSRC}/modules/try/try.man ${WRKSRC}/modules/try/try.man.noinstall
+
+post-install:
+.if ${PORT_OPTIONS:MDOCS}
+	${MKDIR} ${DOCSDIR}
+	cd ${WRKSRC} && ${MAKE} html-doc
+	cd ${WRKSRC}/doc/html && ${COPYTREE_SHARE} \* ${DOCSDIR}
 .endif
 
+regression-test: build
+	cd ${WRKSRC} && ${SETENV} LANG=C LC_ALL=C DISPLAY= ${MAKE} test
 
-RUNTEST=	${SETENV} LANG=C DISPLAY= ${MAKE} -C ${WRKSRC} test
-MYID	!=	${ID} -u
-.if ${MYID} == 0
-RUNTEST:=	${SU_CMD:S/root/-m nobody/} "${RUNTEST}"
-pre-build:
-	#
-	# Preparing to run the tests as `nobody'
-	#
-	${FIND} ${WRKSRC} -type d -o -name jpeg.test | ${XARGS} ${CHOWN} nobody
-.endif
-
-test:
-	@if ! ${RUNTEST};	\
-	then	\
-		${AWK} '$$NF == "FAILED" { echo = 1 }	\
-			echo { if ($$NF == "start") echo = 0; else print }'	\
-				${WRKSRC}/testlog.log;	\
-		${CAT} ${WRKSRC}/testlog.failures;	\
-		${UNAME} -a;	\
-		${ECHO_MSG} Please, analyze and report the test failures;	\
-		${ECHO_MSG} Be sure to use the latest available microversion;	\
-		${ECHO_MSG} of TCL-${TCL_VER}, however.;	\
-	fi
-
-#post-build:	test
-
-.include <bsd.port.post.mk>
+.include <bsd.port.mk>
