--- a/devel/tcllib/Makefile.man
+++ b/devel/tcllib/Makefile.man
@@ -4,6 +4,7 @@ INSTALL_TARGET=	install-libraries install-applications
 MANCOMPRESSED=	no
 MANN=		S3.n \
 		adjust.n \
+		adler32.n \
 		aes.n \
 		annealing.n \
 		ansi_cattr.n \
@@ -27,6 +28,7 @@ MANN=		S3.n \
 		bignum.n \
 		blowfish.n \
 		calculus.n \
+		cat.n \
 		cfront.n \
 		cgen.n \
 		changelog.n \
@@ -40,6 +42,7 @@ MANN=		S3.n \
 		container.n \
 		control.n \
 		copyops.n \
+		core.n \
 		counter.n \
 		crc16.n \
 		crc32.n \
@@ -78,6 +81,7 @@ MANN=		S3.n \
 		doctools_plugin_apiref.n \
 		dsource.n \
 		dtplite.n \
+		events.n \
 		expander.n \
 		export.n \
 		export_docidx.n \
@@ -88,7 +92,10 @@ MANN=		S3.n \
 		export_text.n \
 		export_wiki.n \
 		fa.n \
+		facade.n \
 		faop.n \
+		fifo.n \
+		fifo2.n \
 		filetypes.n \
 		fileutil.n \
 		fourier.n \
@@ -97,15 +104,19 @@ MANN=		S3.n \
 		ftpd.n \
 		fuzzy.n \
 		gasm.n \
+		generator.n \
 		graph.n \
 		graph1.n \
 		graphops.n \
+		halfpipe.n \
+		hex.n \
 		hook.n \
 		html.n \
 		html_cssdefaults.n \
 		htmlparse.n \
 		huddle.n \
 		ident.n \
+		identity.n \
 		imap4.n \
 		imenu.n \
 		import.n \
@@ -117,6 +128,7 @@ MANN=		S3.n \
 		introduction.n \
 		ipager.n \
 		irc.n \
+		iso8601.n \
 		javascript.n \
 		jpeg.n \
 		json.n \
@@ -124,12 +136,14 @@ MANN=		S3.n \
 		lambda.n \
 		ldap.n \
 		ldapx.n \
+		limitsize.n \
 		linalg.n \
 		log.n \
 		logger.n \
 		loggerAppender.n \
 		loggerUtils.n \
 		machineparameters.n \
+		map_geocode_nominatim.n \
 		map_slippy.n \
 		map_slippy_cache.n \
 		map_slippy_fetcher.n \
@@ -148,6 +162,7 @@ MANN=		S3.n \
 		me_tcl.n \
 		me_util.n \
 		me_vm.n \
+		memchan.n \
 		mime.n \
 		mimetypes.n \
 		montecarlo.n \
@@ -174,7 +189,10 @@ MANN=		S3.n \
 		nntp.n \
 		nroff_manmacros.n \
 		ntp_time.n \
+		null.n \
+		nullzero.n \
 		numtheory.n \
+		observe.n \
 		ooutil.n \
 		optimize.n \
 		otp.n \
@@ -241,6 +259,8 @@ MANN=		S3.n \
 		pt_to_api.n \
 		qcomplex.n \
 		queue.n \
+		random.n \
+		randseed.n \
 		rational_funcs.n \
 		rc4.n \
 		rcs.n \
@@ -250,10 +270,12 @@ MANN=		S3.n \
 		repeat.n \
 		report.n \
 		rest.n \
+		rfc2822.n \
 		ripemd128.n \
 		ripemd160.n \
 		roman.n \
 		romberg.n \
+		rot.n \
 		rtcore.n \
 		sasl.n \
 		sha1.n \
@@ -265,10 +287,13 @@ MANN=		S3.n \
 		snit.n \
 		snitfaq.n \
 		soundex.n \
+		spacer.n \
 		special.n \
 		stack.n \
 		statistics.n \
+		std.n \
 		stooop.n \
+		string.n \
 		stringprep.n \
 		stringprep_data.n \
 		struct_list.n \
@@ -286,6 +311,7 @@ MANN=		S3.n \
 		tcllib_interp.n \
 		tcllib_ip.n \
 		tcllib_msgcat.n \
+		tcllib_try.n \
 		tepam_argument_dialogbox.n \
 		tepam_introduction.n \
 		tepam_procedure.n \
@@ -295,10 +321,12 @@ MANN=		S3.n \
 		textutil.n \
 		textutil_split.n \
 		textutil_string.n \
+		textwindow.n \
 		tie.n \
 		tie_std.n \
 		tiff.n \
 		tqueue.n \
+		transformcore.n \
 		transmitter.n \
 		traverse.n \
 		treeql.n \
@@ -312,8 +340,11 @@ MANN=		S3.n \
 		urn-scheme.n \
 		uuencode.n \
 		uuid.n \
+		variable.n \
 		wip.n \
 		xsxp.n \
 		yaml.n \
-		yencode.n
+		yencode.n \
+		zero.n \
+		zlib.n
 .endif
