Add dns/p5-POE-Filter-DNS-TCP 0.04, a POE Filter to handle DNS over TCP connections.
It is needed for the latest version of dns/p5-POE-Component-Server-DNS.


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316420 35697150-7ecd-e111-bb59-0022644237b5

--- a/dns/Makefile
+++ b/dns/Makefile
@@ -115,6 +115,7 @@
     SUBDIR += p5-POE-Component-Client-DNSBL
     SUBDIR += p5-POE-Component-Resolver
     SUBDIR += p5-POE-Component-Server-DNS
+    SUBDIR += p5-POE-Filter-DNS-TCP
     SUBDIR += p5-Stanford-DNSserver
     SUBDIR += p5-Tie-DNS
     SUBDIR += p5-pgeodns
