--- a/games/opengfx/Makefile
+++ b/games/opengfx/Makefile
@@ -1,19 +1,15 @@
-# New ports collection makefile for:	OpenGFX
-# Date created:				2010-11-04
-# Whom:					Ilya A. Arhipov <admin@gorodkirov.ru>
-#
+# Created by: Ilya A. Arkhipov <rum1cro@yandex.ru>
 # $FreeBSD$
-#
 
 PORTNAME=	opengfx
-PORTVERSION=	0.4.4
+PORTVERSION=	0.4.6.1
 CATEGORIES=	games
 MASTER_SITES=	http://hu.binaries.openttd.org/binaries/extra/${PORTNAME}/${PORTVERSION}/ \
 		http://us.binaries.openttd.org/binaries/extra/${PORTNAME}/${PORTVERSION}/ \
 		http://cz.binaries.openttd.org/openttd/binaries/extra/${PORTNAME}/${PORTVERSION}/
 DISTNAME=	${PORTNAME}-${PORTVERSION}-all
 
-MAINTAINER=	micro@heavennet.ru
+MAINTAINER=	rum1cro@yandex.ru
 COMMENT=	Free alternative graphics for OpenTTD game engine
 
 USE_ZIP=	yes
