--- a/games/p5-Games-Dice/Makefile
+++ b/games/p5-Games-Dice/Makefile
@@ -2,12 +2,12 @@
 # $FreeBSD$
 
 PORTNAME=	Games-Dice
-PORTVERSION=	0.03
+PORTVERSION=	0.04
 CATEGORIES=	games perl5
 MASTER_SITES=	CPAN
 PKGNAMEPREFIX=	p5-
 
-MAINTAINER=	ports@FreeBSD.org
+MAINTAINER=	danilogondolfo@gmail.com
 COMMENT=	Perl module to simulate die rolls
 
 MAN3=		Games::Dice.3
