Upgrade to version 23.
git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316427 35697150-7ecd-e111-bb59-0022644237b5

--- a/editors/paredit-mode.el/Makefile
+++ b/editors/paredit-mode.el/Makefile
@@ -1,11 +1,10 @@
 # $FreeBSD$
 
 PORTNAME=	paredit-mode.el
-PORTVERSION=	22
-PORTREVISION=	4
+PORTVERSION=	23
 CATEGORIES=	editors elisp
 MASTER_SITES=	http://mumble.net/~campbell/emacs/
-DISTNAME=	paredit-22.el
+DISTNAME=	paredit-${PORTVERSION}.el
 EXTRACT_SUFX=
 EXTRACT_ONLY=
 
