- Fix ezmlm support by using subcommands of ezmlm-list   on the main database dir instead of subdirs [1]. This   is reported upstream at:   http://sourceforge.net/tracker/?func=detail&aid=3094082&group_id=6691&atid=306691 - Ignore the devel 1.2.16 version, it is not buildable - Mirror distfile - Convert tab to space in pkg-descr
PR:		ports/177389 [1]
Submitted by:	Tsunehiko Suzuki <tss-fbspr@e-ontap.com> [1]


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316429 35697150-7ecd-e111-bb59-0022644237b5

--- a/mail/qmailadmin/Makefile
+++ b/mail/qmailadmin/Makefile
@@ -3,10 +3,11 @@
 
 PORTNAME=	qmailadmin
 PORTVERSION=	1.2.15
-PORTREVISION=	2
+PORTREVISION=	3
 PORTEPOCH=	2
 CATEGORIES=	mail www
-MASTER_SITES=	SF/${PORTNAME}/${PORTNAME}-stable/${PORTVERSION}
+MASTER_SITES=	SF/${PORTNAME}/${PORTNAME}-stable/${PORTVERSION} \
+		http://mirror.shatow.net/freebsd/${PORTNAME}/
 
 MAINTAINER=	bdrewery@FreeBSD.org
 COMMENT=	CGI program for administering Qmail with vchkpw/vpopmail
@@ -29,6 +30,8 @@ PATCH_SITES+=	http://qmail.jms1.net/vpopmail/:onchange \
   		LOCAL/bdrewery/${PORTNAME}/:onchange
 PATCHFILES+=	qmailadmin-1.2.12-onchange.3.patch:onchange
 PATCH_DIST_STRIP+=	-p1
+
+PORTSCOUT=	ignore:1.2.16
 
 OPTIONS_DEFINE=	IPAUTH USER_INDEX MODIFY_QUOTA DOMAIN_AUTOFILL \
 		IDX IDX_SQL HELP SPAM_DETECTION SPAM_NEEDS_EMAIL \
