Readd dns/bind-tools. This is done in a similar manner as the old bind-tools, but uses bind99 instead of bind97 as master port. Change bind99 to facilitate the bind-tools slave, in a simlar way as was done for bind97.
Approved by:	erwin (maintainer)


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316430 35697150-7ecd-e111-bb59-0022644237b5

--- a/dns/Makefile
+++ b/dns/Makefile
@@ -11,6 +11,7 @@
     SUBDIR += bind98
     SUBDIR += bind99
     SUBDIR += bindgraph
+    SUBDIR += bind-tools
     SUBDIR += c-ares
     SUBDIR += checkdns
     SUBDIR += credns
