- Convert USE_GETTEXT to USES (part 2)
Approved by:	portmgr (bapt)


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316434 35697150-7ecd-e111-bb59-0022644237b5

--- a/devel/avr-libc/Makefile
+++ b/devel/avr-libc/Makefile
@@ -46,7 +46,7 @@ BUILD_DEPENDS+=	doxygen:${PORTSDIR}/devel/doxygen \
 
 USE_BZIP2=	yes
 USE_GMAKE=	yes
-USE_GETTEXT=	build
+USES=		gettext:build
 HAS_CONFIGURE=	yes
 MAKE_JOBS_SAFE=	yes
 
