--- a/games/unknown-horizons/Makefile
+++ b/games/unknown-horizons/Makefile
@@ -22,7 +22,7 @@ ONLY_FOR_ARCHS=		i386 amd64
 
 USE_XZ=			yes
 USE_GNOME=		intltool
-USE_GETTEXT=		build
+USES=			gettext:build
 USE_PYTHON=		-2.7
 USE_PYDISTUTILS=	yes
 PYDISTUTILS_PKGNAME=	UnknownHorizons
