--- a/www/kdewebdev/Makefile
+++ b/www/kdewebdev/Makefile
@@ -30,7 +30,7 @@ PREFIX=		${KDE_PREFIX}
 USE_BZIP2=	yes
 USE_XORG=	xpm
 USE_GMAKE=	yes
-USE_GETTEXT=	build
+USES=		gettext:build
 USE_AUTOTOOLS=  libtool
 
 .include <${.CURDIR}/../../x11/kde3/Makefile.kde>
