--- a/devel/kdevelop/Makefile
+++ b/devel/kdevelop/Makefile
@@ -55,7 +55,7 @@ USE_LDCONFIG=	yes
 USE_KDELIBS_VER=3
 USE_BZIP2=	yes
 USE_GMAKE=	yes
-USE_GETTEXT=	build
+USES=		gettext:build
 USE_BDB=	yes
 USE_AUTOTOOLS=	libtool
 _NO_KDE_FINAL=	yes
