--- a/russian/kde3-i18n/Makefile
+++ b/russian/kde3-i18n/Makefile
@@ -22,7 +22,7 @@ EXPIRATION_DATE=	2013-07-01
 USE_KDELIBS_VER=3
 USE_BZIP2=	yes
 USE_GMAKE=	yes
-USE_GETTEXT=	build
+USES=		gettext:build
 GNU_CONFIGURE=	yes
 KDE_I18N=	yes
 
