--- a/lang/rust/Makefile
+++ b/lang/rust/Makefile
@@ -2,7 +2,7 @@
 # $FreeBSD$
 
 PORTNAME=	rust
-PORTVERSION=	0.5
+PORTVERSION=	0.6
 CATEGORIES=	lang
 MASTER_SITES=	http://static.rust-lang.org/dist/:src \
 		http://static.rust-lang.org/stage0-snapshots/:boot
@@ -15,7 +15,7 @@ COMMENT=	A language with a focus on memory safety and concurrency
 
 RUST_SOURCE=	${DISTNAME}${EXTRACT_SUFX}
 RUST_BOOT=	rust-stage0-${RUST_BOOT_SIG}.tar.bz2
-RUST_BOOT_SIG=	2012-12-19-8554d5e-freebsd-x86_64-2bffa280f338913c735672f6ddb630c6da126fad
+RUST_BOOT_SIG=	2013-03-28-f7a2371-freebsd-x86_64-01f1e4b94504045e763eecb71c7e0852f6e85036
 RUST_TARGET=	x86_64-unknown-freebsd
 
 ONLY_FOR_ARCHS=	amd64
@@ -28,18 +28,14 @@ USE_PYTHON_BUILD=	2.6-2.7
 
 MAN1=	rustc.1
 
-OPTIONS_DEFINE=		CARGO
-CARGO_DESC=		Build with package manager
-OPTIONS_DEFAULT=	CARGO
+OPTIONS_DEFINE=		RUSTPKG
+RUSTPKG_DESC=		Build with package manager
+OPTIONS_DEFAULT=	RUSTPKG
 
 .include <bsd.port.pre.mk>
 
 .if ${OSVERSION} < 900044
 EXTRA_PATCHES+=	${FILESDIR}/log2.patch
-.endif
-
-.if ${OSVERSION} < 801000
-EXTRA_PATCHES+=	${FILESDIR}/tgammaf.patch
 .endif
 
 .if ${OSVERSION} >= 900044
@@ -51,13 +47,12 @@ CONFIGURE_ARGS+=	--enable-clang
 USE_GCC=	yes
 .endif
 
-.if ${PORT_OPTIONS:MCARGO}
+.if ${PORT_OPTIONS:MRUSTPKG}
 RUN_DEPENDS+=	curl:${PORTSDIR}/ftp/curl \
-		git:${PORTSDIR}/devel/git \
-		gpg:${PORTSDIR}/security/gnupg
-PLIST_SUB+=	CARGO=""
+		git:${PORTSDIR}/devel/git
+PLIST_SUB+=	RUSTPKG=""
 .else
-PLIST_SUB+=	CARGO="@comment "
+PLIST_SUB+=	RUSTPKG="@comment "
 .endif
 
 LIB_DEPENDS+=	execinfo:${PORTSDIR}/devel/libexecinfo
@@ -73,17 +68,14 @@ post-extract:
 
 post-patch:
 	${REINPLACE_CMD} \
-	    -e 's|subprocess.call(\["curl"|subprocess.call(["fetch"|' \
-	    ${WRKSRC}/src/etc/snapshot.py
-	${REINPLACE_CMD} \
 	    -e 's|$$(PREFIX_ROOT)/share/man|${MANPREFIX}/man|' \
 	    ${WRKSRC}/mk/install.mk
 	${REINPLACE_CMD} \
-	    -e '/get-snapshot.py $$(CFG_HOST_TRIPLE)/d' \
+	    -e '/get-snapshot.py $$(CFG_BUILD_TRIPLE)/d' \
 	    ${WRKSRC}/mk/stage0.mk
-.if empty(PORT_OPTIONS:MCARGO)
+.if empty(PORT_OPTIONS:MRUSTPKG)
 	${REINPLACE_CMD} \
-	    -e '/$$(Q)$$(call INSTALL,$$(HB2),$$(PHB),cargo$$(X))/d' \
+	    -e '/$$(Q)$$(call INSTALL,$$(HB2),$$(PHB),rustpkg$$(X_$$(CFG_BUILD_TRIPLE)))/d' \
 	    ${WRKSRC}/mk/install.mk
 .endif
 
