- Update to 4.3.11 - Use USERS/GROUPS - Mark MAKE_JOBS_UNSAFE - Give maintainership to submitter
PR:		ports/178084
Submitted by:	Mark Felder <feld@feld.me>


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316441 35697150-7ecd-e111-bb59-0022644237b5

--- a/net-mgmt/xymon-client/Makefile
+++ b/net-mgmt/xymon-client/Makefile
@@ -1,21 +1,25 @@
 # $FreeBSD$
 
 PORTNAME=	xymon
-PORTVERSION=	4.3.10
+PORTVERSION=	4.3.11
 CATEGORIES=	net-mgmt www
 MASTER_SITES=	SF/xymon/Xymon/${PORTVERSION}
 PKGNAMESUFFIX=	-client${PKGNAMESUFFIX2}
 DIST_SUBDIR=	repacked
 
-MAINTAINER=	ports@FreeBSD.org
+MAINTAINER=	feld@feld.me
 COMMENT=	System for monitoring servers and networks - Client
 
 LICENSE=	GPLv2
+
+USERS=	xymon
+GROUPS=	xymon
 
 # Options
 XYMONUSER?=	xymon
 XYMONHOSTIP?=	127.0.0.1
 
+MAKE_JOBS_UNSAFE=	yes
 USE_GMAKE=	yes
 CONFIGURE_ENV=	MAKE=gmake
 MAKE_ENV+=	XYMONUSER="${XYMONUSER}"
@@ -27,11 +31,6 @@ CONFIG_FILES=	clientlaunch.cfg xymonclient.cfg localclient.cfg
 # Configure script is interactive
 do-configure:
 	${CP} ${FILESDIR}/Makefile ${WRKSRC}/
-
-pre-install:
-	if ! pw groupshow ${XYMONUSER}; then pw groupadd ${XYMONUSER} -g 280; fi
-	if ! pw usershow ${XYMONUSER}; then pw useradd ${XYMONUSER} -g ${XYMONUSER} -u 280 \
-		-h - -d ${WWWDIR} -s /usr/sbin/nologin -c "Xymon Monitor"; fi
 
 post-install:
 .for i in ${CONFIG_FILES}
