--- a/devel/libcheck/Makefile
+++ b/devel/libcheck/Makefile
@@ -15,6 +15,7 @@ LICENSE=	LGPL21
 OPTIONS_DEFINE=	DOCS EXAMPLES
 
 #CONFIGURE_ARGS=	--docdir=${DOCSDIR}
+CONFIGURE_ENV=	ac_cv_path_AWK_PATH=${AWK}
 GNU_CONFIGURE=	yes
 USE_GMAKE=	yes
 USE_LDCONFIG=	yes
