--- a/devel/p5-Benchmark-Timer/Makefile
+++ b/devel/p5-Benchmark-Timer/Makefile
@@ -2,6 +2,7 @@
 
 PORTNAME=	Benchmark-Timer
 PORTVERSION=	0.7102
+PORTREVISION=	1
 CATEGORIES=	devel perl5
 MASTER_SITES=	CPAN
 PKGNAMEPREFIX=	p5-
@@ -10,6 +11,8 @@ MAINTAINER=	eadler@FreeBSD.org
 COMMENT=	Code benchmarking tool
 
 LICENSE=	GPLv2
+
+BUILD_DEPENDS=	p5-Module-Install>0:${PORTSDIR}/devel/p5-Module-Install
 
 PERL_CONFIGURE=	yes
 
