--- a/www/mochiweb/Makefile
+++ b/www/mochiweb/Makefile
@@ -23,11 +23,9 @@ GH_PROJECT=	mochiweb
 GH_COMMIT=	92b8f5b
 GH_TAGNAME=	v${PORTVERSION}
 
-.include <bsd.port.pre.mk>
-
-.if ${PORT_OPTIONS:MDOCS}
 PORTDOCS=	*
-.endif
+
+.include <bsd.port.options.mk>
 
 do-install:
 .if ${PORT_OPTIONS:MDOCS}
@@ -48,4 +46,4 @@ do-install:
 	@${INSTALL_DATA} ${WRKSRC}/include/* ${PREFIX}/lib/erlang/lib/mochiweb-${PORTVERSION}/include
 	@${INSTALL_DATA} ${WRKSRC}/src/* ${PREFIX}/lib/erlang/lib/mochiweb-${PORTVERSION}/src
 
-.include <bsd.port.post.mk>
+.include <bsd.port.mk>
