Take maintainership, fix pkg-descr
git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316452 35697150-7ecd-e111-bb59-0022644237b5

--- a/misc/xdelta/Makefile
+++ b/misc/xdelta/Makefile
@@ -7,7 +7,7 @@ PORTREVISION=	1
 CATEGORIES=	misc devel
 MASTER_SITES=	${MASTER_SITE_GOOGLE_CODE}
 
-MAINTAINER=	ports@FreeBSD.org
+MAINTAINER=	eadler@FreeBSD.org
 COMMENT=	A diff/patch utility for binary files
 
 USES=		pkgconfig
