For some unmaintained ports: 	- fix format for pkg-descr 	- convert to OptionsNG 	- remove logic for older versions of python which we no longer support 	- remove option for old versions of FreeBSD 	- unconditionally set PORTDOCS 	- etc.
Reviewed by:	jgh


git-svn-id: svn+ssh://svn.freebsd.org/ports/head@316454 35697150-7ecd-e111-bb59-0022644237b5

--- a/mail/svnmailer/Makefile
+++ b/mail/svnmailer/Makefile
@@ -21,21 +21,18 @@ PYDISTUTILS_PKGVERSION=	${DISTVERSION}
 
 MAN1=		svn-mailer.1
 
-.include <bsd.port.pre.mk>
-
-pre-patch:
-.if ${PYTHON_REL} >= 250
-EXTRA_PATCHES=	${FILESDIR}/py25-src-lib-svnmailer-notifier-_base.py
-.endif
-
-.if defined(NOPORTDOCS)
-PYDISTUTILS_INSTALLARGS+=	--no-install-docs
-.else
 PORTDOCS=	*
+
+EXTRA_PATCHES=	${FILESDIR}/py25-src-lib-svnmailer-notifier-_base.py
+
+.include <bsd.port.options.mk>
+
+.if ! ${PORT_OPTIONS:MDOCS}
+PYDISTUTILS_INSTALLARGS+=	--no-install-docs
 .endif
 
 post-patch:
 	@${REINPLACE_CMD} -e "1s|^.*|#!${PYTHON_CMD}|" ${WRKSRC}/setup.py
 	@${REINPLACE_CMD} -e "1s|^.*|#!${PYTHON_CMD}|" ${WRKSRC}/src/svn-mailer
 
-.include <bsd.port.post.mk>
+.include <bsd.port.mk>
